// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks a list of schedules to see if any are open 1`] = `
Array [
  Object {
    "isActive": true,
    "label": "Hours",
    "status": "10:30 AM — 2:00 AM",
  },
]
`;

exports[`handles multiple internal schedules for the same timeframe 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30 AM — Noon",
  },
  Object {
    "isActive": true,
    "label": "Hours",
    "status": "1:00 PM — 3:00 PM",
  },
]
`;

exports[`handles multiple named schedules for the same timeframe 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30 AM — Noon",
  },
  Object {
    "isActive": false,
    "label": "Hours2",
    "status": "10:30 AM — Noon",
  },
  Object {
    "isActive": true,
    "label": "Hours2",
    "status": "1:00 PM — 3:00 PM",
  },
]
`;

exports[`returns a list of [isOpen, scheduleName, verboseStatus] tuples 1`] = `
Array [
  Object {
    "isActive": true,
    "label": "Hours",
    "status": "10:30 AM — 2:00 AM",
  },
]
`;

exports[`returns false if none are available for this day 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "Closed today",
  },
]
`;

exports[`returns false if none are open 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30 AM — 2:00 PM",
  },
]
`;
